--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,12 @@
 
 /* Add your own colors here */
 :root {
-  --col-0: #fbabb7;
-  --col-1: #f391a0;
-  --col-2: #ea3788;
-  --col-3: #b0228c;
-  --col-4: #282c34;
-  --col-5: #a4eb7c;
+  --col-0: #e2f0c5;
+  --col-1: #d6f391;
+  --col-2: #64b857;
+  --col-3: #106648;
+  --col-4: #283431;
+  --col-5: #8dcc76;
 }
 
 h1 {
@@ -82,6 +82,8 @@ h2 {
   border: none;
   border-bottom: 3px solid var(--col-2);
   padding: 0.25rem 0;
+  color: green;
+  font-size: 100rem;
 }
 
 /** Class for the container that wraps your input and button for adding a joke. */
